--- a/css/main.css
+++ b/css/main.css
@@ -23,3 +23,17 @@
 .text-link {
   font: 10px verdana;
 }
+
+.person-image img {
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+}
+
+.person-label .badge {
+  margin-left: -5px;
+  margin-top: -10px;
+}
+
+/*# sourceMappingURL=main.css.map */
