--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,36 @@
-.body {
+body {
+  overflow-x: hidden;
+}
+
+svg {
   border-style: solid;
   border-width: 1px;
+  border-color: #C3C3C3;
 }
-.body .header {
+
+.header {
   background-color: black;
   color: white;
-  min-height: 50px;
+  min-height: 5%;
   height: auto;
   padding: 10px;
+}
+.header .row {
+  width: 100%;
+}
+
+.body {
+  min-height: 90%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #C3C3C3;
+}
+
+graph-chart {
+  display: block;
+}
+graph-chart .glyphicon-refresh {
+  margin-bottom: -3em;
 }
 
 .node {
@@ -15,11 +38,18 @@
   stroke-width: 1.5px;
 }
 
+g path.link {
+  fill: none;
+  stroke: #666;
+  stroke-width: 1.5px;
+}
+
+/*
 .link {
   stroke: #999;
   stroke-opacity: .6;
 }
-
+*/
 .node text {
   font: 10px verdana;
   stroke: black;
@@ -37,10 +67,45 @@
   height: 200px;
   overflow: hidden;
 }
+@media (max-width: 544px) {
+  .person-image img {
+    width: 100px;
+    height: 100px;
+  }
+}
 
 .person-label .badge {
   margin-left: -5px;
   margin-top: -10px;
+  font-size: 1em;
+}
+@media (max-width: 544px) {
+  .person-label .badge {
+    margin: 0;
+  }
+}
+
+.graph-tooltip {
+  position: absolute;
+  z-index: 10;
+  visibility: hidden;
+}
+@media (max-width: 544px) {
+  .graph-tooltip {
+    font-size: 10px;
+    max-width: 200px;
+  }
+}
+
+.footer {
+  background-color: black;
+  color: white;
+  min-height: 5%;
+  height: auto;
+  padding: 10px;
+}
+.footer .row {
+  width: 100%;
 }
 
 /*# sourceMappingURL=main.css.map */
