--- a/partials/caseInfoCard.html
+++ b/partials/caseInfoCard.html
@@ -1,25 +1,21 @@
 <div class="panel panel-primary"> 
 	<div class="panel-heading"> 
-		<h3 class="panel-title">Person Card</h3> 
+		<h3 class="panel-title">Case</h3>
 	</div> 
 	<div class="panel-body"> 
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-12">
-					<div class="person-image">
-						<img ng-src="{{imageUrl}}" alt="Image" />
-					</div>
-				</div>
+				<div class="col-md-6">Case ID</div>
+				<div class="col-md-6">{{caseId}}</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">Name</div>
-				<div class="col-md-6">{{name}}</div>
+				<div class="col-md-6">Case Type</div>
+				<div class="col-md-6">{{caseType}}</div>
 			</div>
-			<div class="row" ng-repeat="label in labels">
-				<div class="col-md-12 person-label">
-					<span ng-class="getLabel(label.type)">{{label.text}}</span><span class="badge">{{label.count}}</span></div>
-				</div>
-			
+			<div class="row">
+				<div class="col-md-6">Date</div>
+				<div class="col-md-6">{{date}}</div>
+			</div>
 		</div>
 	</div> 
 </div>
