--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,9 +1,9 @@
-<div class="header container-fluid">
+<div class="footer container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">Accenture Case Relationships</div>
+					<div class="col-md-6">Copyright</div>
 				</div>
 			</div>
 		</div>
