--- a/partials/header.html
+++ b/partials/header.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="header container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">Accenture Case Relationships</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
