--- a/partials/state2.list.html
+++ b/partials/state2.list.html
@@ -1,4 +1,5 @@
-<h1>State 2</h1>
-<hr/>
-<a ui-sref="state2.list">Show List</a>
-<div ui-view></div>
+<!-- partials/state2.list.html -->
+<h3>List of State 2 Things</h3>
+<ul>
+	<li ng-repeat="thing in things">{{ thing }}</li>
+</ul>
