--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+
 body{
 	overflow-x: hidden;
 	
@@ -27,6 +29,17 @@ svg{
   	border-color: #C3C3C3;
 }
 
+/*
+@media (max-width: $screen-xs-max){
+  .left{
+    float:right;
+  }
+
+  .right{
+    float:left;
+  }
+}
+*/
 graph-chart{
   display:block;
   .glyphicon-refresh{
